--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,2 +1,3 @@
-• سهَّلنا عملية تحديد صور إضافية عندما تكون أذونات الوصول المحدود إلى الصور مُفعَّلة في iOS. تمَّ تغيير موضع زر "إدارة" لكي يكون دائمًا مرئيًا، كما أن تحديث الصور المُحدّدة أصبح أسرع بكثير.
-• عندما تنقر على إشعار خلال مكالمة صوتية أو مكالمة فيديو، سَيتم تصغير المكالمة تلقائيًا لإظهار الدردشة المتعلقة بالإشعار دون أي خطوات إضافية. وفِّر خطواتك الإضافية لشيء أفضل (مثل الرقص مثلًا).
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
