--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,2 +1,3 @@
-• Hem fet que sigui més fàcil seleccionar imatges addicionals quan estan habilitats en iOS els permisos de fotos d'Accés Limitat. Hem reubicat el botó de "Gestionar" perquè sigui sempre visible.
-• Ara, quan toquis sobre una notificació durant una trucada de veu o vídeo, aquesta es minimitzarà automàticament per mostrar el xat en qüestió sense que hagis de fer res més.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
