--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,2 +1,3 @@
-• Vi har gjort det nemmere at vælge flere billeder, når billedtilladelser med "Begrænset adgang" er aktiveret i iOS. Knappen Administration er blevet flyttet, så den altid er synlig, og opdatering af dit valg er blevet lynhurtig.
-• Når du nu trykker på en notifikation under et tale- eller videoopkald, minimeres opkaldet automatisk for at vise den relevante chat uden ekstra trin. Gem dine ekstra trin (især når de er "taps") til stepdans.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
