--- a/fastlane/metadata/en-GB/release_notes.txt
+++ b/fastlane/metadata/en-GB/release_notes.txt
@@ -1,2 +1,3 @@
-• We made it easier to select additional pictures when Limited Access photo permissions are enabled in iOS. The Manage button has been repositioned so that it's always visible, and updating your chosen selection is so fast that it's never a photo finish.
-• Now when you tap on a notification during a voice or video call, the call will automatically minimize to show the relevant chat without any extra steps. Save your extra steps (especially when they're taps) for tap dancing.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
