--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,2 +1,3 @@
-• Hemos facilitado la selección de más imágenes cuando tienes activado el permiso de acceso limitado a fotos en iOS. Ahora el botón Gestionar está siempre visible y actualizar tu selección será tan rápido que te parecerá un truco de magia.
-• Ahora, cuando toques una notificación durante una llamada o videollamada, la pantalla se minimizará automáticamente para mostrar el chat en cuestión sin que tengas que hacer nada más. Así, podrás guardar tus energías para tocar teclas más interesantes, como las de un piano.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
