--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,2 +1,3 @@
-• Vous n'accordez à Signal qu'un accès limité à vos photos ? On a une bonne nouvelle pour vous  : le bouton "Gérer" change de place et devient plus accessible. Il n'y a pas photo : autoriser l'accès à d'autres images n'a jamais été aussi simple.
-• Lorsque vous appuyez sur une notification pendant un appel vocal ou vidéo, la fenêtre de l'appel se réduit automatiquement pour afficher la conversation en question. Vous n'avez rien d'autre à faire. Pourquoi faire compliqué quand on peut faire simple ? Exit les étapes superflues.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
