--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,2 +1,3 @@
-• iOS में फ़ोटो अनुमतियों का सीमित ऐक्सेस चालू होने पर, हमने अतिरिक्त तस्वीरें चुनना आसान बना दिया है। 'प्रबंधित करें' बटन की जगह बदल दी गई है, ताकि यह हमेशा दिखता रहे और आपकी चुनी गई फ़ोटो को अपडेट करना इतना तेज़ हो कि किसी परेशानी की गुंजाइश ही न बचे।
-• अब जब आप वॉयस या वीडियो कॉल के दौरान किसी नोटिफ़िकेशन पर टैप करते हैं, तो बिना किसी अतिरिक्त स्टेप के संबंधित चैट दिखाने के लिए कॉल अपने-आप मिनीमाइज़ हो जाएगा। अपने अतिरिक्त स्टेप्स (खास तौर पर, जब उनमें टैप करना हो) को टैप डांसिंग के लिए बचाकर रखें।
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
