--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,3 @@
-• Egyszerűbbé tettük a további fotók kiválasztását, ha a korlátozott hozzáférésű fotókhoz való hozzáférés engedélyezve van iOS-en. A Kezelés gombot úgy helyeztük át, hogy mindig látható legyen.
-• Mostantól, ha hang- vagy videohívás közben rákoppintasz egy értesítésre, a hívásablak automatikusan minimálisra csökken, hogy minden további lépés nélkül megjelenjen a megfelelő csevegés.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
