--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,2 +1,3 @@
-• iOSで写真のアクセス制限が有効になっている場合に、追加の写真を選択しやすくなりました。管理ボタンは、常に表示されるように位置が変更されました。
-• 音声通話やビデオ通話中に通知をタップすると、他の操作をしなくても通話画面が自動的に最小化され、関連するチャットが表示されるようになりました。
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
