--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,2 +1,3 @@
-• iOS에서 제한된 액세스 사진 사용 권한을 활성화한 경우 추가 사진을 더 쉽게 선택할 수 있도록 했습니다. 메시지 버튼을 더 쉽게 볼 수 있도록 위치를 변경했습니다.
-• 이제 음성 또는 영상 통화 중 알림을 탭할 경우 추가 단계 없이 통화가 자동으로 최소화되고 관련 대화가 표시됩니다.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
