--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,2 +1,3 @@
-• Kami memudahkan pemilihan gambar tambahan apabila kebenaran foto Akses Terhad didayakan dalam iOS. Butang Urus telah diletakkan semula supaya ia sentiasa kelihatan.
-• Kini, apabila anda mengetik pemberitahuan semasa panggilan suara atau video, panggilan akan diminimumkan secara automatik untuk menunjukkan sembang yang berkaitan tanpa sebarang langkah tambahan.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
