--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,2 +1,3 @@
-• We hebben het gemakkelijker gemaakt om extra foto's te selecteren wanneer je beperkte toegang tot foto's hebt ingeschakeld in iOS. De knop Beheren is verplaatst zodat deze altijd zichtbaar is.
-• Wanneer je nu op een melding tikt tijdens een spraak- of video-oproep, wordt de oproep automatisch geminimaliseerd om de relevante chat weer te geven zonder extra stappen.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
