--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,2 +1,3 @@
-• Od teraz łatwiej wybierzesz dodatkowe zdjęcia przy ograniczonym dostępie do zdjęć włączonym w systemie iOS. Przycisk „Zarządzaj” został przeniesiony w bardziej widoczne miejsce, dzięki czemu zakres dostępu zmienisz szybciej, niż zdążysz powiedzieć: „Uśmiech!”.
-• Od teraz, gdy podczas rozmowy głosowej lub wideo dotkniesz powiadomienia, okno z połączeniem zminimalizuje się automatycznie, aby odsłonić odpowiedni czat. Bo po co komplikować coś, co może być proste.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
