--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,2 +1,3 @@
-• Am simplificat selectarea imaginilor suplimentare atunci când permisiunile pentru fotografii cu acces limitat sunt activate în iOS. Butonul Gestionează a fost repoziționat astfel încât să fie mereu vizibil, iar actualizarea selecției alese este atât de rapidă încât nu este niciodată o fotografie.
-• Acum, când atingi o notificare în timpul unui apel vocal sau video, apelul se va minimiza automat pentru a afișa chatul relevant fără pași suplimentari. Economisește pașii suplimentari (mai ales atunci când sunt atingeri) pentru altceva.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
