--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,3 @@
-• พัฒนาสำหรับผู้ใช้ iOS ที่อนุญาตสิทธิ์การเข้าถึงรูปภาพแบบจำกัดให้สามารถเลือกรูปเพิ่มเติมได้สะดวกยิ่งขึ้น ด้วยการปรับตำแหน่งของปุ่ม “จัดการ” เพื่อเป็นออปชั่นให้เลือกใช้ได้เสมอ
-• เมื่อคุณแตะตรงการแจ้งเตือนที่ได้รับระหว่างโทรเสียงหรือวิดีโอคอล หน้าต่างการโทรนั้นจะย่อลงอัตโนมัติเพื่อให้คุณดูแชทที่แจ้งเตือนได้ทันที
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
