--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,2 +1,3 @@
-• iOS'ta Sınırlı Erişimli fotoğraf izinleri etkinleştirildiğinde, ek resim seçmeyi kolaylaştırdık. Yönet düğmesini her zaman görünür olacak şekilde yeniden konumlandırdık ve seçimlerini güncellemeyi flaş hızına ulaştırdık.
-• Artık sesli veya görüntülü arama sırasında bir bildirime dokunduğunda, ekstra bir adıma gerek kalmadan ilgili sohbeti göstermek üzere arama otomatik olarak simge durumuna küçültülür. Yani senin için her şeyi giderek pratikleştiriyoruz!
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
