--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,2 +1,3 @@
-• Якщо ви встановили обмежений доступ до фото в налаштуваннях, тепер вибрати додаткові світлини буде значно простіше. Можливо, навіть простіше, ніж визначитися, яке ж фото варто надіслати…
-• Якщо під час аудіо- або відеовиклику ви отримаєте сповіщення й натиснете на нього, виклик одразу згорнеться без жодних додаткових дій з вашого боку. Так буде більше шансів, що співрозмовник не помітить, як ви трошки відволіклися під час виклику.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
