--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,2 +1,3 @@
-Chúng tôi đã đơn giản hóa việc chọn thêm ảnh khi bật Quyền truy cập hạn chế đối với ảnh trong iOS. Nút Quản lý được đặt lại vị trí để bạn luôn có thể nhìn thấy.
-Giờ đây, khi bạn chạm vào thông báo trong cuộc gọi thoại hoặc video, cuộc gọi sẽ tự động thu nhỏ để hiển thị cuộc trò chuyện liên quan mà không cần thêm bước nào.
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
