--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,2 +1,3 @@
-• 在 iOS 中啟用只能取用「所選相片」權限時，選擇額外的相片會變得更容易。我們已調整「管理」按鈕位置，讓你一定能看到，而且更新你所選相片的速度會更快。
-• 現在，當你在語音或視訊通話期間輕按通知時，通話將自動最小化以顯示相關聊天，而無需任何額外步驟。
+• Saint Patrick's Day was so last month, so we added a workaround for an iOS bug that occasionally causes a green square to appear after pasting an image.
+• We squashed another bug that prevented you from saving multiple images to your camera roll in messages that included an album.
+• And we also fixed a crash that could happen after trying to share a call link on your iPad, so you don't need to pick up your phone in order to make a new call.
